@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 2020-08-29
+  Features:
+    - Labs have steam connections on each side (because they cannot be rotated)
   Bugfixes:
     - Show steam connections in ALT mode
     - Remove debug logs
